feat: add Part 10 — Production Essentials (modules 79-83) and structural improvements
New modules:
- Module 79: Counter Columns (non-idempotent ops, dedicated tables, counter repair)
- Module 80: Prepared Statements & Driver Best Practices (parse-once, idempotency)
- Module 81: JVM & GC Tuning (heap sizing, CompressedOops, G1/ZGC, tuning checklist)
- Module 82: CQL Aggregation & Analytics (COUNT/SUM/AVG, partition-scoped, Spark)
- Module 83: Collection Types Deep-Dive (frozen vs non-frozen, concurrent semantics)

Structural improvements:
- Rename Module 47 from "Demo Summary Dashboard" to "Parts 1-5 Checkpoint"
- Strengthen Module 10 with gossip state, hint metrics, and max_hint_window context
- Add session break suggestions with time estimates to Module 0 roadmap
- Add cross-references between overlapping modules (22↔31, 39↔61)
- Update all docs, tests, and configs for 84-module / 10-part structure

All 194 tests pass.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>